--- a/FifoGroup/FifoGroup.csproj
+++ b/FifoGroup/FifoGroup.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcqFifoInfoDbProvider.cs" />
     <Compile Include="AcqFifoParams.cs" />
     <Compile Include="AcqFifo.cs" />
     <Compile Include="AcqFifoInfo.cs" />
